--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img src="Files/foto.jpg" alt="fotojuan" class="image">
     </main>
     <footer>
-        <p class="footer">Desarrolado por Juan Llamas para de Alura Latam</p>
+        <p class="footer">Desarrolado por Juan Llamas para Alura Latam</p>
     </footer>
 </body>
 </html>
